<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".quiz.basic.QuizBasicPage2"
android:background="@color/black">

<ImageView
    android:id="@+id/ImageView"
    android:layout_width="0dp"
    android:layout_height="300dp"
    android:layout_marginHorizontal="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:src="@drawable/data_type2"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/white"
    app:layout_constraintTop_toBottomOf="@+id/ImageView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/the_code_above_is_an_example_of_arithmetic_operator"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dataType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:text="@string/arithmetic_operators"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataType"
        android:text="@string/basic_modul2"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="textStart"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn2"
        android:layout_width="150dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/box"
        android:backgroundTint="@color/Celadon_blue"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/_70sdp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn2"
        android:layout_width="150dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/box"
        android:backgroundTint="@color/Celadon_blue"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/_70sdp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4/4"
        android:textSize="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_72sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/backBtn2"
        app:layout_constraintEnd_toStartOf="@id/nextBtn2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
