<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Home"
    android:background="@color/Honeydew">

    <ImageView
        android:id="@+id/ImageTitle"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/pc"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/quizBtn"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/Poweder_blue"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/courses"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textSize="28sp"
        android:drawableEnd="@drawable/ic_play"
        app:backgroundTint="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="250dp"/>

    <Button
        android:id="@+id/achievementBtn"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/Poweder_blue"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/achievement"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textSize="28sp"
        app:backgroundTint="@null"
        android:drawableEnd="@drawable/ic_achievement"
        app:layout_constraintTop_toBottomOf="@+id/quizBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/leaderboardBtn"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/Poweder_blue"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/leaderboard"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textSize="28sp"
        app:backgroundTint="@null"
        android:drawableEnd="@drawable/ic_leaderboard"
        app:layout_constraintTop_toBottomOf="@+id/achievementBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:background="@drawable/box"
        android:backgroundTint="@color/Poweder_blue"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/profile"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textSize="28sp"
        app:backgroundTint="@null"
        android:drawableEnd="@drawable/ic_profile"
        app:layout_constraintTop_toBottomOf="@+id/leaderboardBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>