<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.flow.QuizFlowPage3"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/control_flow3"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/ImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/the_code_above_is_an_example_of_do_while_loops"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dataType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:text="@string/do_while_loop"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataType"
            android:text="@string/do_while_loop_works_in_the_same_way_as_the_ordinary_while_loop_except_the_pressence_of_a_do_block_will_guarantees_that_the_code_will_execute_atleast_once_even_when_the_condition_is_not_true_the_example_code_above_will_have_an_output_of_y_11"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:justificationMode="inter_word"
            android:textAlignment="textStart"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtnFlow3"
            android:layout_width="150dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/box"
            android:backgroundTint="@color/Celadon_blue"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/_70sdp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtnFlow3"
            android:layout_width="150dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/box"
            android:backgroundTint="@color/Celadon_blue"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/_70sdp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3/6"
            android:textSize="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_72sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backBtnFlow3"
            app:layout_constraintEnd_toStartOf="@id/nextBtnFlow3"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
